# ai-create-embeddings

./: .gitignore  Dockerfile  README.md  db_manager.py  des.py  des_alternative.py  document_maker.py  embeddings.npz  faissindex.py  go.sh  img.py  index.py  main.py  prompt.sh  pyproject.toml  query.py  query.sh  requirements.txt  run-docker.sh  run-documentembedding.sh  run-local.sh  run-server.sh  server.sh  starter.py  vis.py  vis_alternative.py
.backup/: main.sub.py  main.working.py
.github/: copilot-instructions.md
qdrant/: config.yml
scripts/: run_inference.py  run_prompt.py  run_smart_prompt.py  save_embeddings.py
src/embedder/: multimodal.py
storage/: default__vector_store.json  docstore.json  index_store.json
