[project]
name = "ai-create-embeddings"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cachetools>=6.2.6",
    "fastapi[standard]>=0.121.2",
    "llama-cpp-python>=0.3.16",
    "llama-index>=0.14.8",
    "llama-index-embeddings-huggingface>=0.6.1",
    "llama-index-llms-openai-like>=0.5.3",
    "llama-index-vector-stores-milvus>=0.9.6",
    "pymilvus>=2.6.8",
    "uvicorn>=0.38.0",
]

[tool.uv.workspace]
members = [
    "test",
]
